test/error/unterminated_comment.true
File 0, line 2, col 1:
unterminated comment

